Create route controllers and Swagger definition
